--- a/cdk.out/manifest.json
+++ b/cdk.out/manifest.json
@@ -22,7 +22,7 @@
               "new SecurityGroup (/Users/me802167/selfrepo/platform-cdk/node_modules/@aws-cdk/aws-ec2/lib/security-group.js:174:30)",
               "/Users/me802167/selfrepo/platform-cdk/dist/elasticache/elastiCacheStack.js:24:35",
               "new ElastiCacheStack (/Users/me802167/selfrepo/platform-cdk/dist/elasticache/elastiCacheStack.js:79:11)",
-              "/Users/me802167/selfrepo/platform-cdk/dist/index.js:33:19",
+              "/Users/me802167/selfrepo/platform-cdk/dist/index.js:37:5",
               "processTicksAndRejections (internal/process/task_queues.js:94:5)"
             ]
           }
@@ -34,7 +34,20 @@
             "trace": [
               "/Users/me802167/selfrepo/platform-cdk/dist/elasticache/elastiCacheStack.js:34:38",
               "new ElastiCacheStack (/Users/me802167/selfrepo/platform-cdk/dist/elasticache/elastiCacheStack.js:79:11)",
-              "/Users/me802167/selfrepo/platform-cdk/dist/index.js:33:19",
+              "/Users/me802167/selfrepo/platform-cdk/dist/index.js:37:5",
+              "processTicksAndRejections (internal/process/task_queues.js:94:5)"
+            ]
+          }
+        ],
+        "/SampleProjectElastiCacheStack-local/SampleProject-ElastiCache-to-xMatters/Resource": [
+          {
+            "type": "aws:cdk:logicalId",
+            "data": "SampleProjectElastiCachetoxMatters8A6D9B1F",
+            "trace": [
+              "new Topic (/Users/me802167/selfrepo/platform-cdk/node_modules/@aws-cdk/aws-sns/lib/topic.js:16:26)",
+              "/Users/me802167/selfrepo/platform-cdk/dist/elasticache/elastiCacheStack.js:40:38",
+              "new ElastiCacheStack (/Users/me802167/selfrepo/platform-cdk/dist/elasticache/elastiCacheStack.js:79:11)",
+              "/Users/me802167/selfrepo/platform-cdk/dist/index.js:37:5",
               "processTicksAndRejections (internal/process/task_queues.js:94:5)"
             ]
           }
@@ -46,7 +59,7 @@
             "trace": [
               "/Users/me802167/selfrepo/platform-cdk/dist/elasticache/elastiCacheStack.js:58:38",
               "new ElastiCacheStack (/Users/me802167/selfrepo/platform-cdk/dist/elasticache/elastiCacheStack.js:79:11)",
-              "/Users/me802167/selfrepo/platform-cdk/dist/index.js:33:19",
+              "/Users/me802167/selfrepo/platform-cdk/dist/index.js:37:5",
               "processTicksAndRejections (internal/process/task_queues.js:94:5)"
             ]
           }
@@ -58,7 +71,28 @@
             "trace": [
               "/Users/me802167/selfrepo/platform-cdk/dist/elasticache/elastiCacheStack.js:75:13",
               "new ElastiCacheStack (/Users/me802167/selfrepo/platform-cdk/dist/elasticache/elastiCacheStack.js:79:11)",
-              "/Users/me802167/selfrepo/platform-cdk/dist/index.js:33:19",
+              "/Users/me802167/selfrepo/platform-cdk/dist/index.js:37:5",
+              "processTicksAndRejections (internal/process/task_queues.js:94:5)"
+            ]
+          }
+        ]
+      }
+    },
+    "SampleProjectS3Stack-local": {
+      "type": "aws:cloudformation:stack",
+      "environment": "aws://unknown-account/ap-southeast-2",
+      "properties": {
+        "templateFile": "SampleProjectS3Stack-local.template.json"
+      },
+      "metadata": {
+        "/SampleProjectS3Stack-local/SampleBucket/Resource": [
+          {
+            "type": "aws:cdk:logicalId",
+            "data": "SampleBucket7F6F8160",
+            "trace": [
+              "new Bucket (/Users/me802167/selfrepo/platform-cdk/node_modules/@aws-cdk/aws-s3/lib/bucket.js:387:26)",
+              "new s3Stack (/Users/me802167/selfrepo/platform-cdk/dist/s3/s3Stack.js:8:24)",
+              "/Users/me802167/selfrepo/platform-cdk/dist/index.js:38:5",
               "processTicksAndRejections (internal/process/task_queues.js:94:5)"
             ]
           }
@@ -82,6 +116,7 @@
       "@aws-cdk/aws-s3": "1.46.0",
       "@aws-cdk/aws-events": "1.46.0",
       "@aws-cdk/aws-kms": "1.46.0",
+      "@aws-cdk/aws-sns": "1.46.0",
       "jsii-runtime": "node.js/v12.14.1"
     }
   }
