--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "prettify": "npm run prettifysrc && npm run prettifytest",
+    "prettifysrc": "./node_modules/.bin/prettier   --write 'src/**/*.{ts,js,css,json}'",
+    "prettifytest": "./node_modules/.bin/prettier  --write 'test/**/*.{ts,js,css,json}'"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +20,8 @@
     "@types/node": "10.17.5",
     "jest": "^26.0.1",
     "ts-jest": "^26.0.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "prettier-eslint-cli": "^5.0.0"
   },
   "peerDependencies": {
     "@aws-cdk/core": "^1.41.0"
