--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "outDir": "./dist",
+        "outDir": "dist",
         "target":"ES2018",
         "module": "commonjs",
         "lib": ["es2016", "es2017.object", "es2017.string"],
@@ -18,5 +18,6 @@
         "resolveJsonModule": true,
         "esModuleInterop": true,
         "suppressImplicitAnyIndexErrors": true
-    }
+    },
+    "include": ["src"]
 }
