--- a/cdk.out/SampleProjectS3Stack-local.template.json
+++ b/cdk.out/SampleProjectS3Stack-local.template.json
@@ -14,6 +14,39 @@
       "Metadata": {
         "aws:cdk:path": "SampleProjectS3Stack-local/SampleBucket/Resource"
       }
+    },
+    "SampleBucketPolicyADD21177": {
+      "Type": "AWS::S3::BucketPolicy",
+      "Properties": {
+        "Bucket": {
+          "Ref": "SampleBucket7F6F8160"
+        },
+        "PolicyDocument": {
+          "Statement": [
+            {
+              "Action": "s3:GetObject",
+              "Condition": {
+                "NotIpAddress": {
+                  "aws:SourceIp": [
+                    "165.225.226.0/23",
+                    "203.210.82.0/24",
+                    "3.105.1.245/32",
+                    "194.223.47.45/32"
+                  ]
+                }
+              },
+              "Effect": "Deny",
+              "Principal": "*",
+              "Resource": "arn:aws:s3:::avant-systems-test-bucket/*",
+              "Sid": "Stmt8882271437483"
+            }
+          ],
+          "Version": "2012-10-17"
+        }
+      },
+      "Metadata": {
+        "aws:cdk:path": "SampleProjectS3Stack-local/SampleBucket Policy/Resource"
+      }
     }
   }
 }
