--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist",
   "scripts": {
-    "build": "tsc -p .",
+    "build": "tsc --project .",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
